--- a/views/costumes/index.ejs
+++ b/views/costumes/index.ejs
@@ -1,23 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Costumes - Index</title>
-</head>
-<body>
-    <h1>All Costumes</h1>
-    <a href="/costumes/new">Add New Costume</a>
-    <ul>
+
+<div class="container mt-5">
+    <!-- Header Section -->
+    <div class="text-center">
+        <h1 class="display-5">Available Costumes</h1>
+        <p class="lead">Browse through our collection and find your perfect match!</p>
+    </div>
+
+    <!-- Costume Cards Grid -->
+    <div class="row row-cols-1 row-cols-md-3 g-4 mt-4">
         <% costumes.forEach(costume => { %>
-            <li>
-                <a href="/costumes/<%= costume._id %>"><%= costume.name %></a>
-                (<a href="/costumes/<%= costume._id %>/edit">Edit</a>)
-                <form action="/costumes/<%= costume._id %>?_method=DELETE" method="POST" style="display:inline;">
-                    <button type="submit">Delete</button>
-                </form>
-            </li>
+        <div class="col">
+            <div class="card h-100" style="box-shadow: 0 10px 30px rgba(161, 22, 131, 0.5), 0 6px 6px rgb(206, 67, 169); border: turquoise 3px solid;">
+                <img
+                     src="<%= costume.main_image.includes('dropbox.com')
+                     ? costume.main_image.replace('www.dropbox.com', 'dl.dropboxusercontent.com').replace('?dl=0', '?raw=1')
+                    : costume.main_image %>"
+                    class="card-img-top img-fluid"
+                     alt="<%= costume.name %>"
+                     style="object-fit: contain; height: 200px; width: 100%; background-color: #f8f8f8;">
+
+                <div class="card-body">
+                    <h5 class="card-title"><%= costume.name %></h5>
+                    <p class="card-text">
+                        <strong>Style:</strong> <%= costume.style %><br>
+                        <strong>Size:</strong> <%= costume.size %><br>
+                        <strong>Color:</strong> <%= costume.color %>
+                    </p>
+                    <p class="card-text"><%= costume.description %></p>
+                    <a href="/costumes/<%= costume._id %>" class="btn btn-primary btn-sm">View Details</a>
+                </div>
+            </div>
+        </div>
         <% }) %>
-    </ul>
-</body>
-</html>
+    </div>
+</div>
