--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <title>Dashboard</title>
@@ -11,12 +11,11 @@
             border: turquoise 10px solid ;
             border-radius: 25px;
             /* border-bottom: 440; */
-
             box-shadow: hotpink 0px 0px 55px;
         }
-    </style>
-
-</head><h1>Dashboard</h1>
+    </style> -->
+<!-- </head> -->
+<h1>Dashboard</h1>
 <div class="container mt-4">
     <div class="row">
         <div class="col">
