--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+    <head>
     <title>Restyled Rack!</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
             background: url('/images/Copy of ReStyled White Logo (900 x 450 px) (3).png') no-repeat bottom ;
-            background-size: 80%;
+            background-size: 50%;
             background-position: center;
             border: turquoise 10px solid ;
             border-radius: 25px;
@@ -16,7 +16,7 @@
         }
     </style>
 
-</head>
+    </head>
 <body>
     <div class="container text-center mt-1">
         <h1 class="display-4">Restyled Rack</h1>
@@ -24,9 +24,8 @@
     </div>
     <div class="container2 text-center mt-2">
         <h3 class="display-6">Why Pay Retail When you can Buy Resale</h3>
-        <p class="lead">Manage your costume budget with ease!</p>
-        <a href="/costumes" class="btn btn-primary btn-lg mt-3">Go to Costumes</a>
+        <p class="lead">Manage your Dance costume Inventory!</p>
+        <a href="/costumes" class="btn btn-primary btn-lg mt-3">Go to 'On Hand' Costumes</a>
     </div>
-    <
 </body>
 </html>
